реализация удаления из файла