@@ -11,6 +11,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.InputStream;
 import java.net.URI;
 
+import java.net.URL;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
@@ -36,7 +37,7 @@ public class MinioService {
     @SneakyThrows
     public String uploadFile(final MultipartFile file) {
         createBucketIfNotExists();
-        String objectName = UUID.randomUUID().toString().replaceAll("-", "").substring(0, 16);
+        String objectName = UUID.randomUUID().toString();
         try (InputStream stream = file.getInputStream()) {
             minioClient.putObject(PutObjectArgs.builder()
                     .bucket(bucketName)
@@ -55,13 +56,11 @@ public class MinioService {
 
     @SneakyThrows
     public void deleteFile(final String url) {
-        URI uri = new URI(url);
-        String bucketName = uri.getHost();
-        String objectName = uri.getPath().substring(1);
-
+        URL url1 = new URL(url);
+        String fileName = url1.getPath().substring(url1.getPath().lastIndexOf('/') + 1);
         minioClient.removeObject(RemoveObjectArgs.builder()
                 .bucket(bucketName)
-                .object(objectName)
+                .object(fileName)
                 .build());
     }
 
